# merge-conflict-assistant

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  build.rs  flake.nix
scripts/: make-conflict
src/: main.rs  parser.rs  server.rs  state.rs  test_helpers.rs
src/lib/: mod.rs  parser.rs  server.rs
tests/integration/: README.md  conftest.py  pyproject.toml  test_code_action_response.py  test_helix.py  test_lifecycle.py  test_log_file.py  test_resolve_conflict.py
