[package]
name = "merge-conflict-assistant"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "merge-conflict-assistant"
path = "src/bin/lsp.rs"

[[bin]]
name = "parser"
path = "src/bin/parser_driver.rs"

[lib]
name = "common"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
log = "0.4"
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
rstest = "0.25"
