[package]
name = "merge-conflict-assistant"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.0", features = ["derive"] }
crossbeam-channel = "0.5"
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
rstest = "0.25"
