[package]
name = "merge-conflict-assistant"
version = "0.5.2"
edition = "2024"
description = "LSP server that detects merge conflict markers and offers code actions to resolve them"
license = "BSD-3-Clause"
repository = "https://github.com/shaleh/merge-conflict-assistant"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.0", features = ["derive"] }
crossbeam-channel = "0.5"
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
rstest = "0.25"
